Reg2Run Tool Changelog

2.0.6 (-)

[+] UAC support added

[~] Parameter to set working directory -w renamed to -d


2.0.5(2009.02.16)

[~] Fixed an error causing UnauthorizedAccessException on HKLM registry hive write

2.0.4 (2009.02.03)

[+] Now both keys in HKLM and HKCU are being created on import

2.0.3 (2009.01.12)

[+] Additional scopes into ImportObject.Parse() for more memory use optimization
[+] Now it's possible to specify only application name (without extension indication) for import, i.e. 'reg2run -p foo' while being in foo.exe's root directory
[+] Console would not be closed if application was called from Windows Explorer, Run As.. or Run menu

[~] Release file names contains revision number
[~] Default filter into the open file dialog is *.exe

[-] Removed unused DllImport calls

2.0.2 (2008.12.22)

[+] Exceptions serialization
[+] Parameter '-r' can be set either as flag or value. Flag indicates to start specified application on successful import; value will be passed as argument to started application
[+] Parameter '/?' means the same as '-?'

[~] Adding and running notifications contains full path

2.0.1 (2008.12.13)

[+] Initial public release