@@ -3,6 +3,7 @@ Reg2Run Tool Changelog
 2.0.6 (-)
 
 [+] UAC support added
+[+] New parameters added: --hkcu means writing to HKEY_CURRENT_USER registry hive, --hklm to HKEY_LOCAL_MACHINE
 
 [~] Parameter to set working directory -w renamed to -d
 
